# Rarefactor

./: .gitignore  LICENSE  Makefile  README.md  REUSE.toml  ROADMAP.md  buf.gen.yaml  buf.yaml  docker-compose.yml  main.py  pyproject.toml  start_crawl.py
backend/: Dockerfile  Dockerfile.enrichment  Dockerfile.nats  Dockerfile.ollama  Dockerfile.web-discovery  README.md  coverage.out  docker-compose.yml  go.mod  main.py  pyproject.toml  server.py  start_crawl.py
backend/app/: cache.py  crawler_engine.py  database.py  models.py  utils.py
backend/app/services/: crawler_service.py  search_service.py
backend/app/structures/: redis_rank_engine.py
backend/cmd/server/: main.go  main_test.go
backend/cmd/vector-worker/: main.go
backend/cmd/worker/: main.go
backend/internal/core/: RateLimitedSource.go  core_test.go  errors.go  errors_test.go  graphrunner.go  pipeline.go  types.go
backend/internal/crawler/: coordinator.go  coordinator_test.go  crawler.go  crawler_test.go  engine.go  engine_test.go  security_test.go
backend/internal/database/: nats.go  postgres.go  qdrant.go  redis.go
backend/internal/llm_provider/: geminiprovider.go  mockprovider.go  ollamaprovider.go
backend/internal/processor/: chunker.go  crawler.go  discovery.go  embedding.go  enrichment.go  file.go  metadata.go  ollamaprovider.go  politeness.go  processor_test.go  security.go  smartcrawler.go  spa_crawler.go  vectorfork.go
backend/internal/search/: embedder.go  embedder_test.go  search.go  search_test.go
backend/migrations/: 000001_init_documents.up.sql  000002_create_crawl_jobs.up.sql
(+44 files in other folders)
